--- a/MyHelloWorld/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MyHelloWorld/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,23 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T10-3P-afE">
+                                <items>
+                                    <barButtonItem title="Plan 1" id="ka5-Aj-N8q"/>
+                                </items>
+                            </toolbar>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="7sD-b6-yPh">
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7sD-b6-yPh" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="01l-JK-oJ7"/>
+                            <constraint firstItem="T10-3P-afE" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="2Da-4R-oNp"/>
+                            <constraint firstItem="7sD-b6-yPh" firstAttribute="top" secondItem="5" secondAttribute="top" constant="355" id="acm-K1-Ulx"/>
+                            <constraint firstItem="T10-3P-afE" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="d81-7y-euK"/>
+                            <constraint firstItem="7sD-b6-yPh" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="keZ-QC-R3v"/>
+                            <constraint firstItem="T10-3P-afE" firstAttribute="top" secondItem="5" secondAttribute="top" constant="-6" id="mym-gw-Lh7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
