--- a/MyHelloWorld/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MyHelloWorld/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,23 +1,56 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="V2Y-pz-l7L">
+                                <items>
+                                    <navigationItem title="Test" id="rYS-kA-m6t"/>
+                                </items>
+                            </navigationBar>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c2D-W8-VYc">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <tabBarItem systemItem="favorites" id="ay8-hA-WIo"/>
+                                    <tabBarItem title="Bookmark" id="FrU-oy-K5d"/>
+                                    <tabBarItem systemItem="more" id="VuB-S6-C4J"/>
+                                </items>
+                            </tabBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="V2Y-pz-l7L" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="Csp-Ms-zYc"/>
+                            <constraint firstItem="c2D-W8-VYc" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="ivw-qG-D8n"/>
+                            <constraint firstItem="c2D-W8-VYc" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="kAS-eW-vwp"/>
+                            <constraint firstItem="V2Y-pz-l7L" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="mz7-sw-Pd8"/>
+                            <constraint firstItem="c2D-W8-VYc" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="pfl-F8-aw6"/>
+                            <constraint firstItem="V2Y-pz-l7L" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="xya-Yf-9kR"/>
+                        </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-42" y="21"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
